kubernetes/wp-manager/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wp-manager
  namespace: wp-manager
spec:
  selector:
    app: wp-manager
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
